[ALPS06280307] arm64: configs: mediatek: sync configs from mgk_64_k510
Post build fail for lost of mtk_cm_mgr_mt6895.ko.
Here update vulscan configs according to base mgk project.

MTK-Commit-Id: 8e99c0a90791f26ac41b980d2104c3357a801e56

Signed-off-by: Haodong.Zhang <haodong.zhang@mediatek.com>
CR-Id: ALPS06280307
Feature: Vulnerability Scan
Change-Id: I1ced630842bc244c24f16fc817bcb5adc43558ae

--- a/arch/arm64/configs/mgk_64_vulscan_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_vulscan_k510_defconfig
@@ -96,6 +96,7 @@ CONFIG_KEYBOARD_MTK_KPD=m
 CONFIG_KEYBOARD_MTK_PMIC=m
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S NT36672C"
 CONFIG_TOUCHSCREEN_MT6983_ALPHA_SUPPORT=m
+CONFIG_TOUCHSCREEN_MT6895_ALPHA_SUPPORT=m
 CONFIG_SERIAL_8250_MT6577=m
 CONFIG_I2C_MT65XX=m
 CONFIG_SPI_MT65XX=m
@@ -443,6 +444,7 @@ CONFIG_MTK_CM_IPI=m
 CONFIG_MTK_CM_MGR_MT6893=m
 CONFIG_MTK_CM_MGR_MT6983=m
 CONFIG_MTK_CM_MGR_MT6879=m
+CONFIG_MTK_CM_MGR_MT6895=m
 CONFIG_MTK_QOS_FRAMEWORK=m
 CONFIG_MTK_QOS_MT6893=y
 CONFIG_MMC_MTK=m
